<resources>
    <string name="app_name">Reader\'sGuild</string>
    <string name="textview_splash">Reader\'s Guild</string>
    <string name="textview_login">LOGIN</string>
    <string name="textview_signup_name">Name</string>
    <string name="textview_signup_email">E-Mail</string>
    <string name="textview_signup_mobileno">Mobile Number</string>
    <string name="textview_signup_password">Password</string>
    <string name="textview_signup_branch">Branch</string>
    <string name="textview_signup_year">Year</string>
    <string name="textview_signup_hostel">Hostel</string>
    <string name="textview_signup_roomNo">Room No.</string>
    <string name="about_rg_1">The ambience of reading; fruits wisdom and unfurls the intellect. An environ that brings this atmosphere to the doorstep is Readers\' Guild.
A harbinger of ecstasy, Readers\' Guild is a cooperative which marks the dawn of reading. An association created to unlatch the world of books for students; also focuses on the content development and graphic designing arenas.\nRG is a platform that allows the readers to dive deep into the realm of reading that accomplishes the job of illuminating lives tangled amidst the darkness.
\nIf you fantasize about the book world, then RG is just an accessible voyage for you.\nAre you ready to sail on this voyage?</string>
    <string name="textview_signup_rollno">Roll Number</string>
    <string name="textview_open">OPEN</string>
</resources>
